# yandex-tracker-mcp

./: .dockerignore  .dockerignore 2  .dxtignore  .dxtignore 2  .editorconfig  .gitignore  .mcpbignore  CHANGELOG 2.md  CHANGELOG.md  CLAUDE 2.md  CLAUDE.md  Dockerfile  Makefile  Makefile 2  README 2.md  README.md  README_ru.md  Taskfile.yml  compose 2.yaml  glama 2.json  manifest 2.json  manifest.json  pyproject.toml  server.json  smithery 2.Dockerfile  smithery 2.yaml  smithery.yaml
.claude/: settings.json
.claude/commands/: add-tool.md  docs.md  ghactions.md  push.md  release.md
.github/workflows/: docker.yml  package.yml  release.yml  test.yml
06/e3c8e9af37/: metadata.json
18/d506a00f43/: metadata.json
1b/837b039a54/: metadata.json
20/49dd0ab218/: metadata.json
25/a991424ae5/: metadata.json
3a/d4d29d58e1/: metadata.json
46/19aaf9a7e9/: metadata.json
47/a78971029f/: metadata.json
54/fc2ba70e38/: metadata.json
60/4d95727270/: metadata.json
6b/c555ce5dd1/: metadata.json
71/3e0cf5e7f8/: metadata.json
74/d6201d3b87/: metadata.json
79/b329896817/: metadata.json
7e/c0751a3cb7/: metadata.json
81/b4b85ec331/: metadata.json
ac/247ec1cd32/: metadata.json
ae/a735ecf4f5/: metadata.json
b4/ab50112a92/: metadata.json
b9/f935bc9028/: metadata.json
bc/bc58f930d3/: metadata.json
c1/d52e555858/: metadata.json
c6/d8004ec155/: metadata.json
dxt-utils/: patch-platform.py
e9/b0e4146e17/: metadata.json
eb/8dea3b27f8/: metadata.json
mcp_tracker/: __main__.py  settings.py
tests/: aioresponses_utils.py  conftest.py  protocol_utils.py
(+214 files in other folders)
