[project]
name = "mcp-yandex-tracker"
version = "0.1.0"
description = "Yandex Tracker MCP Server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.18",
    "mcp[cli]>=1.6.0",
    "pydantic>=2.11.3",
    "pydantic-settings>=2.8.1",
    "python-dateutil>=2.9.0.post0",
    "yandex-tracker-client>=2.8",
    "yarl>=1.20.0",
]
